--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,44 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Real-Time Bus Tracking</title>
+</head>
+<body>
+  <h1>Real-Time Bus Tracking</h1>
+
+  <h2>Routes</h2>
+  <ul>
+    <li>Colombo to Ja-Ela</li>
+    <li>Colombo to Matara</li>
+    <li>Colombo to Jaffna</li>
+    <li>Colombo to Anuradhapura</li>
+    <li>Colombo to Galle</li>
+  </ul>
+
+  <h2>Buses</h2>
+  <div id="bus-list"></div>
+
+  <script src="app.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -114,4 +154,4 @@
 
   <script src="app.js"></script>
 </body>
-</html>
+</html> -->
