--- a/public/index.html
+++ b/public/index.html
@@ -6,39 +6,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🚌 Real-Time Bus Tracking</h1>
+<div class="container">
+  <h1>🚌 Real-Time Bus Tracking</h1>
 
-    <h2>Routes</h2>
-    <ul class="routes-list">
-      <li>Colombo to Kandy</li>
-      <li>Colombo to Galle</li>
-      <li>Colombo to Jaffna</li>
-      <li>Colombo to Anuradhapura</li>
-      <li>Colombo to Matara</li>
-    </ul>
+  <label for="route-select">Select Route:</label>
+  <select id="route-select">
+    <option value="">All Routes</option>
+  </select>
 
-    <h2>Buses</h2>
-    <table id="bus-table">
-      <thead>
-        <tr>
-          <th>Bus ID</th>
-          <th>Route ID</th>
-          <th>Status</th>
-          <th>Latitude</th>
-          <th>Longitude</th>
-          <th>Last Updated</th>
-        </tr>
-      </thead>
-      <tbody id="bus-list">
-        <!-- Bus data will populate here -->
-      </tbody>
-    </table>
-  </div>
-
-  <script src="app.js"></script>
+  <table id="bus-table">
+    <thead>
+      <tr>
+        <th>Bus ID</th>
+        <th>Route ID</th>
+        <th>Status</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>Last Updated</th>
+      </tr>
+    </thead>
+    <tbody id="bus-list"></tbody>
+  </table>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
 
 
 
