--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,121 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Bus Tracking System</title>
+  <link rel="stylesheet" href="style.css">
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+4xYjHzk6rA0xKvD1rZig7wDFhPZ+NHTkY7s6u6mM="
+    crossorigin=""
+  />
+</head>
+<body>
+  <h1>Real-Time Bus Tracking</h1>
+  <select id="routeSelect"></select>
+  <ul id="busList"></ul>
+  <div id="map"></div>
+
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-o8j3d3CkVh17Zk6e8X/FBZ0XjT+Fz5FrQ8zyZgWwl5E="
+    crossorigin=""
+  ></script>
+  <script src="app.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bus Tracking</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+</head>
+<body>
+  <h1>Real-Time Bus Tracking</h1>
+  <select id="routeSelect"></select>
+  <div id="map"></div>
+  <ul id="busList"></ul>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="app.js"></script>
+</body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bus Tracking System</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+</head>
+<body>
+<h1>Real-Time Bus Tracking</h1>
+
+<div id="routes"></div>
+<div id="map"></div>
+<div id="buses"></div>
+
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="app.js"></script>
+</body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <title>Real-Time Bus Tracking</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Include Leaflet.js CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
   <div class="container">
@@ -17,9 +128,6 @@
     </select>
 
     <h2>Bus Locations</h2>
-    <!-- Add a container for the map -->
-    <div id="map" style="height: 400px;"></div>
-
     <table id="bus-table">
       <thead>
         <tr>
@@ -35,7 +143,5 @@
     </table>
   </div>
   <script src="app.js"></script>
-  <!-- Include Leaflet.js JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </body>
-</html>
+</html> -->
