--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,9 @@
   <meta charset="UTF-8">
   <title>Bus Tracking System</title>
   <link rel="stylesheet" href="style.css">
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+4xYjHzk6rA0xKvD1rZig7wDFhPZ+NHTkY7s6u6mM="
-    crossorigin=""
-  />
+  <link rel="stylesheet"
+        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        crossorigin=""/>
 </head>
 <body>
   <h1>Real-Time Bus Tracking</h1>
@@ -17,131 +14,8 @@
   <ul id="busList"></ul>
   <div id="map"></div>
 
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-o8j3d3CkVh17Zk6e8X/FBZ0XjT+Fz5FrQ8zyZgWwl5E="
-    crossorigin=""
-  ></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+          crossorigin=""></script>
   <script src="app.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bus Tracking</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-</head>
-<body>
-  <h1>Real-Time Bus Tracking</h1>
-  <select id="routeSelect"></select>
-  <div id="map"></div>
-  <ul id="busList"></ul>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="app.js"></script>
-</body>
-</html> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bus Tracking System</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-</head>
-<body>
-<h1>Real-Time Bus Tracking</h1>
-
-<div id="routes"></div>
-<div id="map"></div>
-<div id="buses"></div>
-
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="app.js"></script>
-</body>
-</html> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Real-Time Bus Tracking</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1>🚌 Real-Time Bus Tracking</h1>
-
-    <label for="route-select">Select Route:</label>
-    <select id="route-select">
-      <option value="">All Routes</option>
-    </select>
-
-    <h2>Bus Locations</h2>
-    <table id="bus-table">
-      <thead>
-        <tr>
-          <th>Bus ID</th>
-          <th>Route ID</th>
-          <th>Status</th>
-          <th>Latitude</th>
-          <th>Longitude</th>
-          <th>Last Updated</th>
-        </tr>
-      </thead>
-      <tbody id="bus-list"></tbody>
-    </table>
-  </div>
-  <script src="app.js"></script>
-</body>
-</html> -->
