--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,25 @@
 </head>
 <body>
   <h1>Real-Time Bus Tracking</h1>
+
+  <label for="routeSelect">Select Route:</label>
   <select id="routeSelect"></select>
-  <ul id="busList"></ul>
+
+  <h2>Buses Preview</h2>
+  <table id="busTable">
+    <thead>
+      <tr>
+        <th>Bus ID</th>
+        <th>Route ID</th>
+        <th>Status</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>Last Updated</th>
+      </tr>
+    </thead>
+    <tbody id="busList"></tbody>
+  </table>
+
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
