--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,19 @@
   <h1>Real-Time Bus Tracking</h1>
 
   <div style="margin: 10px 0;">
+  <a href="schedule.html" target="_blank"
+     style="display:inline-block;padding:8px 12px;background:#2d7ef7;color:#fff;border-radius:6px;text-decoration:none;">
+    Open Day View (route + date)
+  </a>
+</div>
+
+  <!-- <div style="margin: 10px 0;">
     <label for="daySelect">Select Day:</label>
     <input type="date" id="daySelect">
     &nbsp;&nbsp;
     <label for="routeSelect">Select Route:</label>
     <select id="routeSelect"></select>
-  </div>
+  </div> -->
 
   <h2>Buses Preview</h2>
   <table id="busTable">
