--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <div style="margin: 10px 0;">
   <a href="schedule.html" target="_blank"
      style="display:inline-block;padding:8px 12px;background:#2d7ef7;color:#fff;border-radius:6px;text-decoration:none;">
-    Open Day View (route + date)
+    Bus Time Table
   </a>
 </div>
 
