--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <th>Bus ID</th>
         <th>Route ID</th>
         <th>Status</th>
-        <th>Location</th>
+        <th>Current Location</th>
         <th>Last Updated</th>
       </tr>
     </thead>
