--- a/public/schedule.html
+++ b/public/schedule.html
@@ -1,4 +1,78 @@
-<!-- public/schedule.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Bus Day View</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .toolbar {
+      width: 80%;
+      margin: 16px auto 0;
+      display: grid;
+      grid-template-columns: 1fr 1fr auto;
+      gap: 12px;
+      align-items: end;
+    }
+    .toolbar label { display:block; text-align:left; font-weight:600; margin-bottom: 4px; }
+    .toolbar input, .toolbar select {
+      width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 6px;
+    }
+    .toolbar button {
+      padding: 10px 14px; border: none; border-radius: 6px; background: #2d7ef7; color: #fff; cursor: pointer;
+    }
+    .toolbar button:disabled { opacity: .6; cursor: not-allowed; }
+    #statusNote { width:80%; margin:10px auto 0; text-align:left; color:#555; font-size: 14px; }
+    #busTable { width: 80%; margin: 16px auto; border-collapse: collapse; }
+    #busTable th, #busTable td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    #busTable th { background-color: #3498db; color: white; }
+  </style>
+</head>
+<body>
+  <h1>Bus Time Table</h1>
+
+  <div class="toolbar">
+    <div>
+      <label for="routeSelect">Route</label>
+      <select id="routeSelect"></select>
+    </div>
+    <div>
+      <label for="dateInput">Date</label>
+      <input id="dateInput" type="date" />
+    </div>
+    <div>
+      <button id="loadBtn">Load</button>
+    </div>
+  </div>
+
+  <div id="statusNote"></div>
+
+  <!-- NEW table layout -->
+  <table id="busTable">
+    <thead>
+      <tr>
+        <th>Bus ID</th>
+        <th>Route ID</th>
+        <th>Start Time</th>
+        <th>Start City</th>
+        <th>End City</th>
+      </tr>
+    </thead>
+    <tbody id="busList"></tbody>
+  </table>
+
+  <script src="schedule.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+<!-- public/schedule.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +100,7 @@
   </style>
 </head>
 <body>
-  <h1>Bus Day View</h1>
+  <h1>Bus Time Table</h1>
 
   <div class="toolbar">
     <div>
@@ -61,4 +135,4 @@
 
   <script src="schedule.js"></script>
 </body>
-</html>
+</html> -->
