--- a/public/schedule.html
+++ b/public/schedule.html
@@ -40,7 +40,7 @@
       <input id="dateInput" type="date" />
     </div>
     <div>
-      <button id="loadBtn">Load</button>
+      <button id="loadBtn">Search</button>
     </div>
   </div>
 
