--- a/public/index.html
+++ b/public/index.html
@@ -36,18 +36,17 @@
   <body>
     <h1>Real-Time Bus Tracking</h1>
 
-    <div style="margin: 20px 0; text-align: center" class="top-actions">
+    <div style="margin: 20px 0">
       <a
         href="schedule.html"
         target="_blank"
         style="
           display: inline-block;
-          padding: 10px 20px;
+          padding: 8px 12px;
           background: #2d7ef7;
           color: #fff;
           border-radius: 6px;
           text-decoration: none;
-          font-size: 16px;
         "
       >
         🚌 Bus Time Table
