--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       .top-actions,
       .controls {
         width: 80%;
+        height: 50px;
+        border-radius: 20px;
         margin: 10px auto;
         display: flex;
         gap: 10px;
@@ -30,6 +32,14 @@
       }
       label {
         font-weight: 600;
+      }
+      .toolbar {
+        width: 80%;
+        margin: 16px auto 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr auto;
+        gap: 12px;
+        align-items: end;
       }
     </style>
   </head>
