--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Express Travels • Live Bus Tracking</title>
+
+    <link rel="icon" href="Logo.ico" type="image/x-icon" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="48x48" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Theme -->
@@ -104,3 +110,98 @@
     </footer>
   </body>
 </html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Bus Tracking System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      crossorigin=""
+    />
+    <style>
+      .top-actions,
+      .controls {
+        width: 80%;
+        height: 50px;
+        border-radius: 20px;
+        margin: 10px auto;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: flex-start;
+      }
+      .btn {
+        display: inline-block;
+        padding: 8px 12px;
+        background: #2d7ef7;
+        color: #fff;
+        border-radius: 6px;
+        text-decoration: none;
+      }
+      label { font-weight: 600; }
+    </style>
+  </head>
+  <body>
+    <h1>Real-Time Bus Tracking</h1>
+
+    <div style="margin: 20px 0">
+      <a
+        href="schedule.html"
+        target="_blank"
+        style="
+          display: inline-block;
+          padding: 8px 12px;
+          background: #2d7ef7;
+          color: #fff;
+          border-radius: 6px;
+          text-decoration: none;
+        "
+      >
+        🚌 Bus Time Table
+      </a>
+    </div>
+
+    <div class="controls">
+      <label for="routeSelect">Select Route:</label>
+      <select id="routeSelect"></select>
+    </div>
+
+    <h2>Buses Preview</h2>
+    <table id="busTable">
+      <thead>
+        <tr>
+          <th>Bus ID</th>
+          <th>Route ID</th>
+          <th>Status</th>
+          <th>Location</th>
+          <th>Last Updated</th>
+        </tr>
+      </thead>
+      <tbody id="busList"></tbody>
+    </table>
+
+    <div id="map"></div>
+
+    <-- Details panel -->
+<!-- <aside id="busDetails" class="details-panel">
+      <div class="details-header">
+        <strong id="bd-title">Bus Details</strong>
+        <button id="bd-close" aria-label="Close">✕</button>
+      </div>
+      <div id="bd-content" class="details-body">
+        <-- filled by app.js -->
+<!-- </div>
+    </aside>
+
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      crossorigin=""
+    ></script>
+    <script src="app.js"></script>
+  </body>
+</html>  -->
