--- a/public/schedule.html
+++ b/public/schedule.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Bus Time Table • Express Travels</title>
+
+    <link rel="icon" href="Logo.ico" type="image/x-icon" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="Logo.png" type="image/png" sizes="48x48" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <style>
@@ -133,6 +139,5 @@
     </main>
 
     <script src="schedule.js"></script>
-   
   </body>
 </html>
